--- a/distributor.html
+++ b/distributor.html
@@ -254,10 +254,10 @@ function main ()
 {
     document.distributor = {
         active  :   11,
-        cell    :   [70, 94, 107, 78, 45, 35, 80, 50, 95, 27, 105, 52, 21, 131, 116, 101, 136, 145, 49, 106, 56, 126, 139, 43, 132, 127, 20, 146, 82, 74, 58, 22, 71, 41, 90, 140, 103, 68, 111, 47, 6, 104, 76, 42, 54, 150, 151, 163, 30, 66, 161, 75, 122, 119, 65, 98, 137, 152, 115, 15, 133, 62, 59, 91, 84, 123, 60, 36, 93, 108, 114, 89, 128, 153, 73, 102, 72, 63, 88, 138, 147, 81, 31, 79, 99, 86, 134, 69, 121, 110, 148, 120, 61, 100, 29, 97, 87, 118, 124, 44, 8, 33, 18, 135, 64, 23, 5, 96, 55, 160, 92, 83, 48, 112, 162, 125, 141, 53, 113, 67, 149, 16, 46, 109, 7, 37, 28, 164, 85, 40, 77, 34, 17, 32, 57, 4, 19],
+        cell    :   [65, 17, 35, 149, 91, 98, 27, 50, 52, 45, 123, 63, 118, 96, 111, 119, 47, 55, 36, 107, 152, 33, 37, 128, 53, 127, 135, 153, 56, 57, 99, 141, 40, 8, 164, 64, 15, 18, 148, 116, 66, 134, 67, 125, 31, 58, 74, 82, 140, 60, 61, 29, 43, 122, 7, 102, 83, 103, 112, 162, 150, 23, 48, 46, 100, 163, 132, 110, 121, 28, 22, 124, 145, 147, 73, 5, 42, 104, 49, 77, 68, 59, 109, 16, 97, 86, 139, 32, 75, 80, 69, 95, 114, 76, 87, 113, 79, 54, 138, 19, 78, 30, 131, 34, 133, 81, 72, 71, 92, 126, 84, 115, 90, 146, 120, 94, 41, 85, 70, 44, 136, 108, 20, 137, 105, 160, 21, 106, 151, 101, 161, 4, 88, 93, 62, 89, 6],
         colors  :       [['#552222','white'], ['#bb3333','white']],
         delay:  3,
-        interval:       [3, 10, 33, 100, 333],
+        interval:       [3, 10, 33, 100, 333, 1000],
         index   :    0,
         indices :   137,
         inverses:   [],
