--- a/distributor.html
+++ b/distributor.html
@@ -175,7 +175,12 @@ function loop ()
         reColor (classname, 1);
     }
     var state = document.getElementById ('state');
-    state.innerHTML = odd ? 'STRONG' : 'weak';
+    if (document.distributor.strong == 0)
+    {
+        state.innerHTML = 'same';
+    } else {
+        state.innerHTML = odd ? 'STRONG' : 'weak';
+    }
 }
 
 //-------------------------------------------------------------------------------
@@ -254,7 +259,7 @@ function main ()
 {
     document.distributor = {
         active  :   11,
-        cell    :   [65, 17, 35, 149, 91, 98, 27, 50, 52, 45, 123, 63, 118, 96, 111, 119, 47, 55, 36, 107, 152, 33, 37, 128, 53, 127, 135, 153, 56, 57, 99, 141, 40, 8, 164, 64, 15, 18, 148, 116, 66, 134, 67, 125, 31, 58, 74, 82, 140, 60, 61, 29, 43, 122, 7, 102, 83, 103, 112, 162, 150, 23, 48, 46, 100, 163, 132, 110, 121, 28, 22, 124, 145, 147, 73, 5, 42, 104, 49, 77, 68, 59, 109, 16, 97, 86, 139, 32, 75, 80, 69, 95, 114, 76, 87, 113, 79, 54, 138, 19, 78, 30, 131, 34, 133, 81, 72, 71, 92, 126, 84, 115, 90, 146, 120, 94, 41, 85, 70, 44, 136, 108, 20, 137, 105, 160, 21, 106, 151, 101, 161, 4, 88, 93, 62, 89, 6],
+        cell    :   [50, 152, 108, 23, 133, 97, 106, 112, 124, 94, 75, 110, 19, 77, 90, 153, 66, 111, 63, 89, 6, 136, 107, 31, 73, 32, 127, 134, 54, 27, 137, 47, 84, 115, 41, 103, 116, 43, 29, 80, 53, 61, 163, 5, 88, 15, 105, 151, 52, 46, 60, 57, 70, 8, 67, 93, 119, 56, 18, 135, 30, 36, 128, 17, 123, 71, 164, 83, 82, 62, 104, 101, 109, 147, 4, 16, 150, 78, 33, 85, 35, 113, 81, 114, 65, 69, 149, 37, 122, 102, 141, 21, 132, 125, 86, 140, 87, 126, 145, 98, 42, 49, 92, 138, 59, 40, 95, 131, 7, 139, 100, 96, 28, 76, 121, 55, 68, 160, 20, 146, 58, 162, 99, 120, 148, 72, 64, 161, 118, 45, 44, 74, 79, 34, 48, 91, 22],
         colors  :       [['#552222','white'], ['#bb3333','white']],
         delay:  3,
         interval:       [3, 10, 33, 100, 333, 1000],
