refined sound generator

--- a/distributor.html
+++ b/distributor.html
@@ -64,42 +64,19 @@ function ePower (direction)
 
 
 //-------------------------------------------------------------------------------
+function clickBuzz (frequency, length) {
 //-------------------------------------------------------------------------------
-// create audio context, masterGain and nodeGain1 nodes
+    // use stored audio context, masterGain and nodeGain1 nodes
+    var audioContext = document.distributor.audioContext;
+    var masterGain   = document.distributor.masterGain;
+    var nodeGain1    = document.distributor.nodeGain1;
 
-var audioContext = new (window.AudioContext || window.webkitAudioContext)();
-//  ( "Webkit/blink browsers need prefix, Safari won't work without window.")
-
-var masterGain = audioContext.createGain();
-masterGain.gain.value = 0.5;
-masterGain.connect(audioContext.destination);
-
-var nodeGain1 = audioContext.createGain();
-nodeGain1.gain.value = 0.5;
-nodeGain1.connect(masterGain);
-
-function clickBuzz( frequency, length) {
-    //var oscillatorNode = new AudioContext.createOscillator ();
-    //oscillatorNode.type = 'square';
-    var oscillatorNode = new OscillatorNode(audioContext, {type: 'square'});
+    var oscillatorNode = new OscillatorNode (audioContext, {type: 'square'});
     oscillatorNode.frequency.value = frequency;
-    oscillatorNode.connect( nodeGain1);
-    oscillatorNode.start(audioContext.currentTime);
-    //setTimeout( function(){oscillatorNode.stop();}, length*1000);
-    // TODO consider length of 1 square wave.
-    oscillatorNode.stop( audioContext.currentTime + length);
+    oscillatorNode.connect ( nodeGain1);
+    oscillatorNode.start (audioContext.currentTime);
+    oscillatorNode.stop  (audioContext.currentTime + length);
 }
-
-//function volume1( rangeInput) {
-    //masterGain.gain.value = +rangeInput.value;
-//}
-
-//function volume2( rangeInput) {
-    //nodeGain1.gain.value= +rangeInput.value;
-//}
-//-------------------------------------------------------------------------------
-//-------------------------------------------------------------------------------
-
 
 
 //-------------------------------------------------------------------------------
@@ -219,7 +196,7 @@ function loop ()
     //console.log (document.distributor.inverses);
     clickBuzz (
         I * 2000 /
-        document.distributor.interval[document.distributor.delay], 0.01);
+        document.distributor.interval[document.distributor.delay], 0.02);
     for (classname of document.distributor.inverses)
     {
         reColor (classname, 0);
@@ -321,11 +298,12 @@ without the burden of unnecessary calculation.
 function main ()
 //-------------------------------------------------------------------------------
 {
+    var audioContext = new (window.AudioContext || window.webkitAudioContext)();
     document.distributor = {
         active  :   11,
-        cell    :   [70, 59, 20, 33, 40, 37, 28, 17, 116, 73, 96, 133, 57, 76, 21, 132, 97, 65, 150, 127, 99, 137, 61, 104, 8, 98, 16, 105, 107, 18, 145, 112, 121, 161, 93, 85, 58, 152, 140, 5, 45, 29, 75, 128, 134, 115, 36, 118, 114, 31, 43, 102, 71, 80, 35, 151, 48, 74, 4, 15, 34, 52, 6, 49, 111, 44, 138, 79, 125, 141, 160, 153, 46, 164, 135, 82, 119, 113, 19, 126, 78, 131, 110, 162, 84, 95, 55, 42, 108, 22, 106, 23, 64, 27, 87, 66, 89, 69, 146, 50, 67, 124, 53, 149, 92, 30, 100, 136, 56, 60, 47, 120, 122, 147, 163, 41, 109, 88, 77, 7, 63, 123, 86, 54, 101, 62, 72, 32, 81, 68, 90, 83, 91, 139, 103, 148, 94],
+        cell    :   [151, 30, 133, 5, 32, 91, 94, 73, 92, 87, 36, 108, 8, 46, 35, 63, 48, 40, 57, 118, 80, 84, 62, 111, 31, 103, 85, 56, 141, 127, 89, 126, 131, 123, 147, 112, 67, 122, 64, 139, 134, 83, 28, 115, 135, 4, 107, 54, 59, 41, 7, 55, 53, 148, 78, 93, 74, 68, 45, 100, 15, 99, 88, 101, 86, 97, 69, 44, 96, 43, 70, 128, 105, 71, 124, 121, 16, 132, 50, 140, 150, 76, 109, 119, 160, 19, 17, 6, 61, 58, 125, 137, 34, 95, 77, 114, 79, 152, 164, 146, 18, 81, 47, 163, 110, 82, 27, 90, 161, 138, 29, 49, 120, 52, 72, 42, 102, 136, 66, 33, 75, 65, 37, 20, 149, 106, 116, 98, 60, 113, 162, 22, 145, 153, 21, 104, 23],
         colors  :       [['#552222','white'], ['#bb3333','white']],
-        delay:  3,
+        delay   :    3,
         interval:       [3, 10, 33, 100, 333, 1000],
         index   :    0,
         indices :   137,
@@ -333,7 +311,19 @@ function main ()
         running : true,
         strong  :    2,
         timer   : null,
+        audioContext: audioContext,
+        masterGain  : audioContext.createGain(),
+        nodeGain1   : audioContext.createGain(),
     };
+
+    var masterGain   = document.distributor.masterGain;
+    var nodeGain1    = document.distributor.nodeGain1;
+
+    masterGain.gain.value = 0.5;
+    masterGain.connect(audioContext.destination);
+
+    nodeGain1.gain.value = 0.5;
+    nodeGain1.connect(masterGain);
 
     info ();
     eSlower ();
